--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "dom.iterable",
       "esnext"
     ],
+
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -26,4 +27,5 @@
   "exclude": [
     "node_modules"
   ]
+,"future": { "webpack5": true }
 }
